// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel styled component extract basic 1`] = `
"import \\"./styled.test.emotion.css\\";
const H1 = styled(\\"h1\\", {
  e: \\"css-1cab7uf\\"
})();"
`;

exports[`babel styled component extract basic 2`] = `".css-1cab7uf{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;width:var(--css-hash-0);}.css-1cab7uf:hover{background-color:green;}@media (max-width:500px){.css-1cab7uf{height:var(--css-hash-1);position:fixed;}}@media print{.css-1cab7uf{display:none;}}.css-1cab7uf::before{color:blue;width:20px;height:20px;content:'pseudo';}"`;

exports[`babel styled component extract no use 1`] = `
"import \\"./styled.test.emotion.css\\";
styled(\\"h1\\", {
  e: \\"css-0\\"
})();"
`;

exports[`babel styled component extract no use 2`] = `""`;

exports[`babel styled component inline basic 1`] = `"const H1 = /*#__PURE__*/styled('h1')('font-size:', fontSize + 'px', ';');"`;

exports[`babel styled component inline composition based on props 1`] = `
"const cls1 = /*#__PURE__*/css('width:20px;');
const H1 = /*#__PURE__*/styled('h1')(props => {
  return props.a ? cssA : cssB;
}, ';font-size:', fontSize + 'px', ';height:20px;transform:translateX(', props => props.translateX, ');');"
`;

exports[`babel styled component inline dynamic fns 1`] = `"const Avatar = /*#__PURE__*/styled('img')('width:96px;height:96px;border-radius:', props => props.theme.borderRadius, ';border:1px solid ', props => props.theme.borderColor, ';');"`;

exports[`babel styled component inline function call 1`] = `"/*#__PURE__*/styled(MyComponent)('font-size:', fontSize + 'px', ';');"`;

exports[`babel styled component inline interpolation in different places 1`] = `
"
const H1 = /*#__PURE__*/styled('h1')('font-size:', fontSize + 'px', ';height:20px;transform:translateX(', props => props.translateX, ');height1:', something, 'wow;width:w', something, 'ow;transform:translateX(', props => props.translateX, ') translateY(', props => props.translateX, ');transform1:translateX(', props => props.translateX, ') translateY(', props => props.translateX, ');transform2:translateX(', props => props.translateX, ') ', props => props.translateX, ';');"
`;

exports[`babel styled component inline media query 1`] = `"const H1 = /*#__PURE__*/styled(\\"h1\\")(\\"@media print{font-size:10pt}@media screen{.child-selector{font-size:13px}}@media screen,print{&:hover + &{line-height:1.2}}@media only screen   and (min-device-width:320px)   and (max-device-width:480px)  and (-webkit-min-device-pixel-ratio:2){.child-selector{line-height:1.4}}\\");"`;

exports[`babel styled component inline more than 10 dynamic values 1`] = `"const H1 = /*#__PURE__*/styled('h1')('text-decoration:', 'underline', ';border-right:solid blue ', 54, 'px;background:', 'white', ';color:', 'black', ';display:', 'block', ';border-radius:', '3px', ';padding:', '25px', ';width:', '500px', ';z-index:', 100, ';font-size:', '18px', ';text-align:', 'center', ';border-left:', p => p.theme.blue, ';');"`;

exports[`babel styled component inline nested 1`] = `"const H1 = /*#__PURE__*/styled('h1')('font-size:', fontSize + 'px', ';& div{color:blue;& span{color:red}}');"`;

exports[`babel styled component inline no dynamic 1`] = `"/*#__PURE__*/styled(\\"h1\\")(\\"color:blue;\\");"`;

exports[`babel styled component inline no use 1`] = `"/*#__PURE__*/styled(\\"h1\\")();"`;

exports[`babel styled component inline objects based on props 1`] = `
"
const H1 = /*#__PURE__*/styled('h1')({ padding: 10 }, props => ({
  display: props.display
}));"
`;

exports[`babel styled component inline objects fn call 1`] = `
"
const H1 = /*#__PURE__*/styled('h1')({
  display: 'flex'
});"
`;

exports[`babel styled component inline objects prefixed 1`] = `
"
const H1 = /*#__PURE__*/styled('h1')({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => {
  padding: props.padding;
});"
`;

exports[`babel styled component inline random expressions 1`] = `
"
const a = () => /*#__PURE__*/css(\\"font-size:1rem\\");
/*#__PURE__*/styled(\\"h1\\")(\\"margin:12px 48px;\\", /*#__PURE__*/css(\\"font-size:32px\\"), \\";color:#ffffff;& .profile{\\", props => props.prop && a(), \\"}\\", { backgroundColor: \\"hotpink\\" }, \\";\\");"
`;

exports[`babel styled component inline shorthand property 1`] = `"const H1 = /*#__PURE__*/styled(\\"h1\\")({ fontSize });"`;

exports[`babel styled component inline styled objects prefixed 1`] = `
"
const H1 = /*#__PURE__*/styled('h1')({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => ({
  display: props.display
}));"
`;

exports[`babel styled component inline styled. objects 1`] = `
"
const H1 = /*#__PURE__*/styled(\\"h1\\")({ padding: 10 }, props => ({
  display: props.display
}));"
`;

exports[`babel styled component inline styled. objects with a multiple spread properties 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = /*#__PURE__*/styled(\\"figure\\")({
  ...defaultText,
  ...defaultFigure
});"
`;

exports[`babel styled component inline styled. objects with a multiple spread properties and other keys 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = /*#__PURE__*/styled('figure')({
  ...defaultText,
  fontSize: '20px',
  ...defaultFigure,
  ...defaultText2
});"
`;

exports[`babel styled component inline styled. objects with a single spread property 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = /*#__PURE__*/styled(\\"figure\\")({
  ...defaultText
});"
`;

exports[`babel styled component renamed import: inline config rename 1`] = `"/*#__PURE__*/what(\\"h1\\")(\\"color:blue;\\");"`;

exports[`babel styled component renamed import: inline variable import: no dynamic 1`] = `"import what from 'emotion'; /*#__PURE__*/what('h1')('color:blue;');"`;
